fixed the spacing on the blog posts

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -36,6 +36,7 @@
 .blogPost {
   margin-bottom: 2rem;
   text-align: center;
+  min-height: 33%;
 }
 .blogPostImage {
   max-width: 100%;
